--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@guolao/vue-monaco-editor": "^1.5.4",
     "electron-squirrel-startup": "^1.0.1",
+    "js-yaml": "^4.1.0",
     "vue": "^3.5.13"
   }
 }
