--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make",
+    "make-mac": "electron-forge make --platform=darwin",
+    "make-win": "electron-forge make --platform=win32",
+    "make-linux": "electron-forge make --platform=linux",
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
@@ -17,6 +19,7 @@
     "@electron-forge/maker-rpm": "^7.6.1",
     "@electron-forge/maker-squirrel": "^7.6.1",
     "@electron-forge/maker-zip": "^7.6.1",
+    "@electron-forge/maker-wix": "^7.6.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.6.1",
     "@electron-forge/plugin-fuses": "^7.6.1",
     "@electron-forge/plugin-vite": "^7.6.1",
@@ -35,6 +38,7 @@
   "dependencies": {
     "@guolao/vue-monaco-editor": "^1.5.4",
     "electron-squirrel-startup": "^1.0.1",
+    "js-yaml": "^4.1.0",
     "vue": "^3.5.13"
   }
 }
