--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Build for Windows
-        run: npm run make -- --platform=win32
+        run: npm run make-win
 
       - name: Upload Windows Artifacts
         uses: actions/upload-artifact@v4
