--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -9,6 +9,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write 
+
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -31,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: out/make/
+          path: out/make/windows
 
   build-macos:
     runs-on: macos-latest
@@ -54,7 +57,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-build
-          path: out/make/
+          path: out/make/mac
 
   build-linux:
     runs-on: ubuntu-latest
@@ -80,7 +83,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
-          path: out/make/
+          path: out/make/linux
 
   release:
     needs: [build-windows, build-macos, build-linux] # Wait for all builds to complete
@@ -114,10 +117,10 @@ jobs:
           name: "Rolling Release"
           body: "🚀 This is the latest rolling release built from `main`."
           draft: false
-          prerelease: false
+          prerelease: true
           files: |
-            windows/*
-            macos/*
-            linux/*
+            out/make/windows/*
+            out/make/macos/*
+            out/make/linux/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
