--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main # Triggers on every push to `main`
+# testing 
   pull_request:
     branches:
       - main
@@ -60,9 +61,6 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        architecture: [x64, arm64]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -79,25 +77,13 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y fakeroot rpm libarchive-tools
 
       - name: Build for Linux
-        run: npm run make-linux -- --arch ${{ matrix.architecture }}
-
-      - name: Upload Linux DEB
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-deb-${{ matrix.architecture }}
-          path: out/make/deb/${{ matrix.architecture }}/*
-
-      - name: Upload Linux RPM
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-rpm-${{ matrix.architecture }}
-          path: out/make/rpm/${{ matrix.architecture }}/*
+        run: npm run make-linux
 
       - name: Upload Linux ZIP
         uses: actions/upload-artifact@v4
         with:
-          name: linux-zip-${{ matrix.architecture }}
-          path: out/make/zip/linux/${{ matrix.architecture }}/*
+          name: linux-zip
+          path: out/make/zip/linux/x64/*
 
   release:
     needs: [build-windows, build-macos, build-linux]
@@ -118,41 +104,11 @@ jobs:
           name: macos-zip
           path: out/make/zip/darwin/arm64
 
-      - name: Download Linux ZIP (x64)
+      - name: Download Linux ZIP
         uses: actions/download-artifact@v4
         with:
-          name: linux-zip-x64
+          name: linux-zip
           path: out/make/zip/linux/x64
-      
-      - name: Download Linux ZIP (arm64)
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-zip-arm64
-          path: out/make/zip/linux/arm64
-      
-      - name: Download Linux DEB (x64)
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-deb-x64
-          path: out/make/deb/x64
-
-      - name: Download Linux DEB (arm64)
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-deb-arm64
-          path: out/make/deb/arm64
-
-      - name: Download Linux RPM (x64)
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-rpm-x64
-          path: out/make/rpm/x64
-
-      - name: Download Linux RPM (arm64)
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-rpm-arm64
-          path: out/make/rpm/arm64
 
       - name: List Downloaded Files (Debug)
         run: ls -R out/make/
@@ -166,16 +122,11 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            out/make/squirrel.windows/x64/*
-            out/make/wix/x64/*
             out/make/zip/win32/x64/*
             out/make/*.dmg
             out/make/zip/darwin/arm64/*
             out/make/deb/x64/*
-            out/make/deb/arm64/*
             out/make/rpm/x64/*
-            out/make/rpm/arm64/*
             out/make/zip/linux/x64/*
-            out/make/zip/linux/arm64/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
