fix yaml syntax error
Signed-off-by: matthiasgekiere <matthias.gekiere@codekt.be>

--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -10,7 +10,8 @@ on:
       - main
 
   workflow_dispatch:
-    version_bump:
+    inputs:
+      version_bump:
         description: "Which version to bump? (major, minor, patch, auto)"
         required: true
         default: "auto"
