--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -63,6 +63,12 @@ jobs:
       - name: Build for macOS
         run: npm run make-mac
 
+      - name: Upload macOS DMG
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-dmg
+          path: out/make/*.dmg
+
       - name: Upload macOS ZIP
         uses: actions/upload-artifact@v4
         with:
@@ -128,6 +134,12 @@ jobs:
         with:
           name: macos-zip
           path: out/make/zip/darwin/arm64
+      
+      - name: Download macOS DMG
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-dmg
+          path: out/make
 
       - name: Download Linux DEB
         uses: actions/download-artifact@v4
