fix: set scan retry option for complex rules where cli crashes.
Also fixed some null checks and update rolling release + added app icons

Signed-off-by: matthiasgekiere <matthias.gekiere@codekt.be>

--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - main # Triggers on every push to `main`
 
+   # testing 
+  pull_request:
+    branches:
+      - main
+
   workflow_dispatch:
     inputs:
       version_bump:
