--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -1,6 +1,10 @@
 name: Rolling Release Opengrep Playground App
 
 on:
+  push:
+    branches:
+      - main
+      
   workflow_dispatch:
     inputs:
      tag:
